@@ -4,9 +4,9 @@ import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import no.nav.registre.testnorge.generersyntameldingservice.consumer.SyntAmeldingConsumer;
+import no.nav.registre.testnorge.generersyntameldingservice.domain.ArbeidsforholdType;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
@@ -14,25 +14,28 @@ import org.springframework.web.server.ResponseStatusException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import no.nav.testnav.libs.domain.dto.aareg.amelding.ArbeidsforholdPeriode;
-import no.nav.registre.testnorge.generersyntameldingservice.provider.request.SyntAmeldingRequest;
 import no.nav.registre.testnorge.generersyntameldingservice.provider.response.ArbeidsforholdDTO;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
-public class GenererSyntAmeldingService {
+public class SyntAmeldingService {
 
     private final SyntAmeldingConsumer syntAmeldingConsumer;
 
-    public List<ArbeidsforholdDTO> generateAmeldinger(SyntAmeldingRequest request) {
-        var antallMeldinger = getAntallMeldinger(request.getStartdato(), request.getSluttdato());
+    public List<ArbeidsforholdDTO> generateAmeldinger(
+            LocalDate startdato,
+            LocalDate sluttdato,
+            ArbeidsforholdType arbeidsforholdType
+    ) {
+        var antallMeldinger = getAntallMeldinger(startdato, sluttdato);
 
         var initialAmelding = syntAmeldingConsumer.getEnkeltArbeidsforhold(
                 ArbeidsforholdPeriode.builder()
-                        .startdato(request.getStartdato())
+                        .startdato(startdato)
                         .build(),
-                request.getArbeidsforholdType());
-        initialAmelding.setRapporteringsmaaned(request.getStartdato().format(DateTimeFormatter.ofPattern("yyyy-MM")));
+                arbeidsforholdType);
+        initialAmelding.setRapporteringsmaaned(startdato.format(DateTimeFormatter.ofPattern("yyyy-MM")));
 
         if (antallMeldinger > 1) {
             initialAmelding.emptyPermisjoner();
@@ -40,7 +43,7 @@ public class GenererSyntAmeldingService {
 
             var response = syntAmeldingConsumer.getHistorikk(initialAmelding);
             response.add(0, initialAmelding);
-            return response.stream().map(ArbeidsforholdDTO::new).collect(Collectors.toList());
+            return response.stream().map(ArbeidsforholdDTO::new).toList();
         }
 
         return Collections.singletonList(new ArbeidsforholdDTO(initialAmelding));
